2010-06-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.13.1

2010-06-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/daisy.Rd: add our *generalized* Gower formula (LaTeX), and
	update the detailled description accordingly.

2010-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.13.0

	* src/daisy.f (cl_daisy): renamed from daisy
	* src/init.c, src/*.[chf]: renamed others, so we can use
	* NAMESPACE (useDynLib): .registration = TRUE

2010-05-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/daisy.q (daisy): using variable weights (for gower).
	* src/daisy.f: ditto

2010-03-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.12.3
	* R/plothier.q (bannerplot): do not use formals(pretty)

2009-12-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/daisy.Rd: fix page number for Gower (1971) reference.

2009-10-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.12.1

	* man/ellipsoidhull.Rd: fix missing \link ((parts former 'graphics'
	have long been moved to 'grDevices'.

2009-05-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.12.0 -- released to CRAN

	* R/silhouette.R (silhouette.default, print.summary.*, plot.*):
	silhouette(x, *) and its methods now also work when x uses integer
	codes different than 1:k.  Previously, this could seg.fault.

	* tests/silhouette-default.R: test it.


2009-03-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/daisy.Rd: fix typo/thinko (thanks to Felix Mueller).

2009-01-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/agnes.q (as.dendrogram.agnes): new utility
	* NAMESPACE: exported

2009-01-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/plot.agnes.Rd: link to pltree.twins() directly

	* R/agnes.q (print.summary.agnes): output 'agnes' instead of `agnes'

2009-01-07  Martin Maechler  <maechler@stat.math.ethz.ch>
