@@ -1,6 +1,6 @@
 Package: cluster
-Version: 1.13.1
-Date: 2010-06-24
+Version: 1.13.2
+Date: 2010-10-21
 Priority: recommended
 Author: Martin Maechler, based on S original by Peter Rousseeuw <rousse@uia.ua.ac.be>,
 	Anja.Struyf@uia.ua.ac.be and Mia.Hubert@uia.ua.ac.be,
@@ -10,6 +10,7 @@ Title: Cluster Analysis Extended Rousseeuw et al.
 Description: Cluster Analysis, extended original from
   Peter Rousseeuw, Anja Struyf and Mia Hubert.
 Depends: R (>= 2.9.0), stats, graphics, utils
+Enhances: MASS
 LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
