@@ -1,3 +1,11 @@
+2010-10-21  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version): 1.13.2  ;  Enhances: MASS
+
+	* src/cluster.h, src/daisy.f, src/mona.f:
+	* src/init.c (FortEntries): s/cl_/cl/ for now,
+	as some f77/g77 setups cannot deal with it correctly.
+
 2010-06-24  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 1.13.1
